crates/alder-parse/src/declaration/snapshots/alder_parse__declaration__infix__tests__infix_left.snap
---
source: crates/alder-parse/src/declaration/infix.rs
description: infix left 6 (|>) = apR
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 2,
            column: 1,
        },
    },
    value: Infix {
        op: "|>",
        associativity: Left,
        precedence: Precedence(
            6,
        ),
        name: "apR",
    },
}
