crates/alder-parse/src/declaration/snapshots/alder_parse__declaration__infix__tests__infix_right.snap
---
source: crates/alder-parse/src/declaration/infix.rs
description: "infix right 5 (::) = cons"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 2,
            column: 1,
        },
    },
    value: Infix {
        op: "::",
        associativity: Right,
        precedence: Precedence(
            5,
        ),
        name: "cons",
    },
}
